# lib/api-spec/openapi.yaml
@@ -848,7 +848,7 @@ components:
 
     User:
       type: object
-      required: [id, name, email, currency, language, isPremium, onboardingCompleted, createdAt]
+      required: [id, name, email, currency, language, isPremium, onboardingCompleted, onboardingDismissed, createdAt]
       properties:
         id:
           type: integer
@@ -868,6 +868,8 @@ components:
           type: ["string", "null"]
         onboardingCompleted:
           type: boolean
+        onboardingDismissed:
+          type: boolean
         createdAt:
           type: string
 
@@ -884,6 +886,8 @@ components:
           type: ["string", "null"]
         language:
           type: ["string", "null"]
+        onboardingDismissed:
+          type: boolean
 
     OnboardingInput:
       type: object
